'photos' app added & Static files setting

--- a/.config/uwsgi/uwsgi.ini
+++ b/.config/uwsgi/uwsgi.ini
@@ -22,5 +22,6 @@ pidfile = /tmp/ec2-deploy.pid
 
 master = true
 vacuum = true
-logto = /var/log/uwsgi/ec2-deploy/@(exec://date +%%Y-%%m-%%d).log
+logto = /var/log/uwsgi/ec2-deploy/@(exec://date +"%%Y-%%m-%%d").log
+;logto = /var/log/uwsgi/ec2-deploy/uwsgi-@(exec://date +%%Y-%%m-%%d).log
 log-reopen = true
