Separate url host in EC2 server:13.125.221.136

--- a/.config/uwsgi/uwsgi.ini
+++ b/.config/uwsgi/uwsgi.ini
@@ -12,16 +12,18 @@ home = /home/ubuntu/.pyenv/versions/fc-ec2-deploy
 module = config.wsgi
 
 ;http = :8000
-uid = deploy
-gid = deploy
+;uid = deploy
+;gid = deploy
+uid = ubuntu
+gid = ubuntu
+
 socket = /tmp/app.sock
 chmod-socket = 666
-chown-socket = deploy:deploy
+chown-socket = ubuntu:ubuntu
 
 pidfile = /tmp/ec2-deploy.pid
 
 master = true
 vacuum = true
 logto = /var/log/uwsgi/ec2-deploy/@(exec://date +"%%Y-%%m-%%d").log
-;logto = /var/log/uwsgi/ec2-deploy/uwsgi-@(exec://date +%%Y-%%m-%%d).log
 log-reopen = true
