--- a/.config/nginx/nginx-app.conf
+++ b/.config/nginx/nginx-app.conf
@@ -2,7 +2,7 @@
 
 server {
     listen 80;
-    server_name *.amazonaws.com *.dlighter.com;
+    server_name *.amazonaws.com;
     charset utf-8;
     client_max_body_size 128M;
 
